# nest

./: .gitattributes  .gitignore  CMakeLists.txt  compile.sh  debug.sh  fetch-llvm.ps1  fetch-llvm.sh  package.sh  project.bat  project.ps1  project.sh  run.sh  run_tests.sh
.github/workflows/: ci.yml
bootstrap/: build.c  entry.S  lib.h  main.c  main.cpp
bootstrap/bloat-buster/: bb_core.c  font.c  gui.c  gui.cpp  image_loader.c  lld_api.cpp  lld_driver.c  llvm.cpp  main.c  pdb_image.c  shader_compilation.c
bootstrap/include/bloat-buster/: base.h  bb_core.h  font.h  gui.h  image_loader.h  lld_api.h  lld_driver.h  llvm.h  shader_compilation.h
bootstrap/include/nest/: base.h  llvm.h  pdb_image.h
bootstrap/include/std/: base.h  entry_point.h  font_provider.h  format.h  graphics.h  image_loader.h  md5.h  os.h  render.h  shader_compilation.h  string.h  ui_builder.h  ui_core.h  virtual_buffer.h  window.h
bootstrap/nest/: llvm.cpp  main.c  pdb_image.c
bootstrap/runner/: runner.c
bootstrap/shaders/: font.frag  font.vert  triangle.frag  triangle.vert  triangle.vert.spv
bootstrap/src/: main.c  pdb_image.c
bootstrap/std/: base.c  entry_point.c  font_provider.c  format.c  graphics.c  image_loader.c  md5.c  os.c  render.c  renderer_metal.cpp  renderer_vulkan.c  sha1.c  shader_compilation.c  string.c  ui_builder.c  ui_core.c  virtual_buffer.c  window.c
dependencies/SPIRV-Tools-vulkan-sdk-1.3.296.0/tools/diff/: diff.cpp
dependencies/volk-1.3.301/: CMakeLists.txt
licenses/raw_pdb/: LICENSE.txt
licenses/simple/: LICENSE.txt
licenses/tb/: LICENSE.txt
src/: main.nat
tests/: add_sub.nat  and.nat  break_continue.nat  comparison.nat  constant_prop.nat  div.nat  mul.nat  or.nat  return_mod_scope.nat  shift_left.nat  shift_right.nat  simple_arg.nat  simple_variable_declaration.nat  stack.nat  thousand_simple_functions.nat  unsigned.nat  while.nat  xor.nat
tests/comparison/: main.nat
tests/first/: main.nat
tests/function_call_args/: main.nat
tests/if/: main.nat
